--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+
+<div id="CSVTable"></div>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="//jquerycsvtotable.googlecode.com/files/jquery.csvToTable.js"></script>
+
+<script>
+$(function() {
+  $('#CSVTable').CSVToTable('PlantDatabase.csv');
+});
+</script>
