--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     <script src="js/csv_to_html_table.js"></script>
 
     <script>
-        function format_link(link) {
+        function format_img(link) {
             if (link)
-                return "<a href='" + link + "' target='_blank'>" + link + "</a>";
+                return "<<img src='" + link + "'  alt='" + link + "'></img>";
             else return "";
         }
 
@@ -52,7 +52,9 @@
                 paging: false
             },
             custom_formatting: [
-                [4, format_link]
+                [2, format_img],
+				[3, format_img],
+				[5, format_img]
             ]
         });
     </script>
