--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <script>
         function format_img(link) {
             if (link)
-                return "<<img src='" + link + "'  alt='" + link + "'></img>";
+                return "<img src='" + link + "'  alt='" + link + "' width='160' height='90'></img>";
             else return "";
         }
 
