--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     <script src="js/csv_to_html_table.js"></script>
 
     <script>
-        function format_img(link) {
-            if (link)
-                return "<img src='" + link + "'  alt='" + link + "' width='160' height='90'></img>";
+        function format_img(img) {
+            if (img)
+                return "<img src='" + img + "'  alt='" + img + "' ></img>";
             else return "";
         }
 
