--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <script>
         function format_img(img) {
             if (img)
-                return "<img src='" + img + "'  alt='" + img + "' ></img>";
+                return "<img src='" + img + "'  alt='" + img + "' width='160' height='90'></img>";
             else return "";
         }
 
