--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         CsvToHtmlTable.init({
             csv_path: "data/PlantDatabase.csv",
             element: "table-container",
-            allow_download: true,
+            allow_download: false,
             csv_options: {
                 separator: ",",
                 delimiter: '"'
