--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	 <h1 class="gamma lato thin uppercase ls-xlarge">
 		 Callie Williams<br>
 		 <span class="open-sans tera ls-xlarge bold">Plant</span><br>
-		 <span class="epsilon ls-medium">Database (UK)</span>
+		 <span class="epsilon ls-medium">Database - UK</span>
 		</h1>
 	 </div>
 	</section>
